deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-prod-deployment
  labels:
    app: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      imagePullSecrets:
        - name: roseaw-dockerhub
      containers:
        - name: flask
          image: cithit/hibbarkm:latest    # your MiamiID / image name
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: nfs-storage
              mountPath: /nfs
      volumes:
        - name: nfs-storage
          persistentVolumeClaim:
            claimName: flask-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: flask-prod-service
spec:
  type: LoadBalancer
  loadBalancerIP: 10.48.229.55      # replace with your assigned LB IP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: flask
