deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-dev-deployment
  labels:
    app: flask-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-dev
  template:
    metadata:
      labels:
        app: flask-dev
    spec:
      imagePullSecrets:
        - name: roseaw-dockerhub
      containers:
        - name: flask-dev
          image: cithit/hibbarkm:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: nfs-storage
              mountPath: /nfs

          # Recommended readiness/liveness probes
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 5

      volumes:
        - name: nfs-storage
          persistentVolumeClaim:
            claimName: flask-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: flask-dev-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: flask-dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: flask-dev-service
                port:
                  number: 80
